# audionimbus

./: .gitmodules  Cargo.toml  LICENSE-MIT  README.md
audionimbus/: CHANGELOG.md  Cargo.toml  README.md
audionimbus-sys/: Cargo.toml  README.md  build.rs
audionimbus-sys/src/: fmod.rs  lib.rs  phonon.rs  wwise.rs
audionimbus/demo/: Cargo.toml  README.md
audionimbus/demo/src/: audio.rs  consts.rs  game_loop.rs  main.rs  output.rs  simulation.rs
audionimbus/examples/: README.md
audionimbus/examples/bevy/: Cargo.toml  README.md
audionimbus/examples/bevy/src/: consts.rs  dsp.rs  main.rs  scene.rs
audionimbus/examples/bevy/src/audio/: mod.rs  node.rs  shared_direction.rs
audionimbus/examples/bevy/src/audio/path/: convolution.rs  direct.rs  mod.rs
audionimbus/examples/core/: Cargo.toml  README.md
audionimbus/examples/core/src/: audio.rs  dsp.rs  game_loop.rs  main.rs  output.rs  room.rs  simulation.rs
audionimbus/src/: air_absorption.rs  audio_buffer.rs  audio_settings.rs  bevy.rs  callback.rs  context.rs  directivity.rs  distance_attenuation.rs  embree.rs  energy_field.rs  error.rs  ffi_wrapper.rs  fmod.rs  geometry.rs  hrtf.rs  impulse_response.rs  lib.rs  open_cl.rs  open_cl_device.rs  prelude.rs  probe.rs  progress_callback.rs  radeon_rays.rs  ray_tracing.rs  reconstructor.rs  sealed.rs  serialized_object.rs  simulation.rs  simulator.rs  true_audio_next.rs  version.rs  wwise.rs
audionimbus/src/baking/: baked_data.rs  error.rs  mod.rs  pathing.rs  reflections.rs
audionimbus/src/bevy/: asset.rs  configuration.rs  debug.rs  error.rs  geometry.rs  hrtf.rs  mod.rs  plugin.rs  prelude.rs  probe.rs  simulation.rs  source.rs  system_set.rs
audionimbus/src/bevy/asset/: mod.rs  probe.rs  scene.rs
audionimbus/src/bevy/geometry/: instanced_mesh.rs  mod.rs  scene.rs  static_mesh.rs
audionimbus/src/bevy/runner/: direct.rs  mod.rs  pathing.rs  reflections.rs  reflections_reverb.rs
audionimbus/src/device/: embree.rs  mod.rs  open_cl.rs  radeon_rays.rs  true_audio_next.rs
audionimbus/src/effect/: audio_effect_state.rs  binaural.rs  binaural_effect.rs  direct.rs  direct_effect.rs  equalizer.rs  error.rs  mod.rs  panning.rs  panning_effect.rs  path.rs  path_effect.rs  pathing.rs  reflection.rs  reflection_effect.rs  reflections.rs  virtual_surround.rs
audionimbus/src/effect/ambisonics/: ambisonics_binaural_effect.rs  ambisonics_decode_effect.rs  ambisonics_encode_effect.rs  ambisonics_rotation_effect.rs  binaural.rs  decode.rs  encode.rs  mod.rs  panning.rs  rotation.rs  speaker_layout.rs  type.rs
audionimbus/src/geometry/: coordinate_system.rs  direction.rs  hit.rs  instanced_mesh.rs  material.rs  matrix.rs  mod.rs  point.rs  ray.rs  scene.rs  sphere.rs  static_mesh.rs  triangle.rs  vector3.rs
audionimbus/src/model/: air_absorption.rs  deviation.rs  directivity.rs  distance_attenuation.rs  mod.rs
audionimbus/src/wiring/: mod.rs  simulation.rs
audionimbus/src/wiring/runner/: direct.rs  mod.rs  pathing.rs  reflections.rs  reflections_reverb.rs
audionimbus/src/wiring/simulation/: direct.rs  mod.rs  pathing.rs  reflections.rs  reflections_reverb.rs
audionimbus/src/wiring/step/: direct.rs  mod.rs  pathing.rs  reflections.rs  reflections_reverb.rs
audionimbus/tests/: audio_buffer.rs  effect.rs  hrtf.rs  integration_test.rs  integration_tests.rs  model.rs  scene.rs  serialization.rs  simulation.rs  sine_wave_440Hz_1s.raw
audionimbus/tests/common/: mod.rs
