[package]
name = "audionimbus"
description = "A safe wrapper around Steam Audio that provides spatial audio capabilities with realistic occlusion, reverb, and HRTF effects, accounting for physical attributes and scene geometry."
version = "0.8.3"
edition = "2021"
authors = ["Maxence Maire <maire.maxence@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "game", "audio", "engine", "steam"]
categories = ["game-development", "game-engines", "multimedia::audio", "simulation", "api-bindings"]
repository = "https://github.com/MaxenceMaire/audionimbus"
readme = "README.md"

[dependencies]
audionimbus-sys = { version = "4.7.1-rc.1", path = "../audionimbus-sys" }
bitflags = "2.8.0"

[features]
fmod = ["audionimbus-sys/fmod"]
wwise = ["audionimbus-sys/wwise"]
auto-install = ["audionimbus-sys/auto-install"]
static = ["audionimbus-sys/static"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
