[package]
name = "audionimbus"
description = "A safe wrapper around Steam Audio that provides spatial audio capabilities with realistic occlusion, reverb, and HRTF effects, accounting for physical attributes and scene geometry."
version = "0.14.0"
edition = "2024"
authors = ["Maxence Maire <maire.maxence@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "game", "audio", "engine", "steam"]
categories = ["game-development", "game-engines", "multimedia::audio", "simulation", "api-bindings"]
repository = "https://github.com/MaxenceMaire/audionimbus"
readme = "README.md"

[dependencies]
arc-swap = { version = "1.8.2", optional = true }
audionimbus-sys = { version = "4.8.2-rc.1", path = "../audionimbus-sys" }
bevy = { version = "0.18", optional = true }
bitflags = "2.9"
object-pool = { version = "0.6.0", optional = true }
slotmap = "1.1.1"

[features]
fmod = ["audionimbus-sys/fmod"]
wwise = ["audionimbus-sys/wwise"]
auto-install = ["audionimbus-sys/auto-install"]
wiring = ["dep:arc-swap", "dep:object-pool"]
default = ["wiring"]
bevy = ["dep:bevy", "wiring"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = ["bevy"]
